--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-eqiuv="X-UA-Compatible" content="ie=edge" />
-    <title>Vite App</title>
+    <title>Three.js Landing Page</title>
     <style>
       *{
         margin: 0;
@@ -13,14 +13,16 @@
       }
 
       html, body{
-        height: 100vh;
+        height: 200%;
+        width: 200%;
         font-family: 'Poppins';
         background: rgb(27, 27, 31);
       }
 
       canvas{
-        width: 100%;
-        height: 100%
+        justify-content: center;
+        align-items: center;
+        display: flex;
       }
 
       .webgl{
@@ -28,6 +30,11 @@
         top: 0;
         right: 0;
         outline: none;
+        margin: 0 0 0 0;
+        width: 300vw;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
       }
 
       .container{
@@ -40,7 +47,7 @@
       }
 
       h1{
-        font-size: 4rem;
+        font-size: 3rem;
       }
 
       p{
@@ -68,8 +75,10 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptatum nostrum quae quia eum molestias nesciunt ipsa deleniti tempore, nam laborum explicabo mollitia dignissimos reiciendis! Culpa, maiores officia? </p>
       <button>Let's Go</button>
     </div>
-    <canvas class="webgl"></canvas>
-    <div id="app"></div>
+    <div>
+      <canvas class="webgl"></canvas>
+    </div>
+    <!-- <div id="app"></div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
     <script type="module" src="./main.js"></script>
